--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <div class="header">
+    <header class="header">
 
         <a href="#">
           <img
@@ -47,12 +47,12 @@
           </ul>
         </div>
 
-        <button>Donate Now</button>
+        <button class="btn">Donate Now</button>
 
-    </div>
+    </header>
 
     <div class="content">
-        <div class="main">
+        <main class="main">
           <div class="alert">
             You've helped us give <span class="text-highlight">72</span> bikes
             to refugees and asylum seekers so far. <strong>Thank you!</strong>
@@ -68,11 +68,11 @@
             <button>Volunteer</button>
           </div>
 
+          
           <div>
             <h2 class="heading-underline">Learn more</h2>
-
-            <div>
-              <div class="article">
+            <div class="bottom-content">
+              <div class="article1">
                 <h3 class="article__title">Why do refugees need bikes?</h3>
                 <p class="article__summary">
                   Many refugees are placed in housing in areas where there are
@@ -87,7 +87,7 @@
                 </p>
               </div>
 
-              <div class="article">
+              <div class="article1">
                 <h3 class="article__title">How can I help?</h3>
                 <p class="article__summary">
                   We need lots of bikes and bike accessories! If you have an
@@ -103,7 +103,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </main>
 
         <div class="sidebar">
           <h2 class="heading-underline">Upcoming events</h2>
@@ -111,8 +111,8 @@
           <div class="article">
             <img
               class="article__thumbnail"
-              src="spring-fundraisers_thumbnail.jpg"
-              alt=""
+              src="images/spring-fundraisers_thumbnail.jpg"
+              alt="thumbimg"
             />
             <div class="article__content">
               <h3 class="article__title">
@@ -128,7 +128,7 @@
           <div class="article">
             <img
               class="article__thumbnail"
-              src="bikes-for-refugees_logo.jpg"
+              src="images/bikes-for-refugees_logo.jpg"
               alt=""
             />
             <div class="article__content">
@@ -141,7 +141,7 @@
           <div class="article">
             <img
               class="article__thumbnail"
-              src="edinburgh-damascus_thumbnail.png"
+              src="images/edinburgh-damascus_thumbnail.png"
               alt=""
             />
             <div class="article__content">
@@ -154,7 +154,6 @@
               </p>
             </div>
           </div>
-
           <a
             href="https://www.facebook.com/BikesforRefugeesScotland/events/?ref=page_internal"
             target="_blank"
